Edit files for Velocity node

--- a/ros_ws/src/robot/CMakeLists.txt
+++ b/ros_ws/src/robot/CMakeLists.txt
@@ -20,6 +20,7 @@ find_package(ament_cmake REQUIRED)
 find_package(rclcpp REQUIRED)
 find_package(std_msgs REQUIRED)
 find_package(sensor_msgs REQUIRED)
+find_package(nav_msgs)
 # uncomment the following section in order to fill in
 # further dependencies manually.
 # find_package(<dependency> REQUIRED)
@@ -29,6 +30,9 @@ ament_target_dependencies(reading_laser rclcpp std_msgs sensor_msgs)
 
 add_executable(reading_encoder ./nodes/Encoder.cpp)
 ament_target_dependencies(reading_encoder rclcpp std_msgs sensor_msgs)
+
+add_executable(reading_velocities ./nodes/Velocity.cpp)
+ament_target_dependencies(reading_velocities rclcpp std_msgs nav_msgs)
 
 if(BUILD_TESTING)
   find_package(ament_lint_auto REQUIRED)
@@ -47,7 +51,7 @@ install(
 )
 
 install(TARGETS
-  reading_laser reading_encoder 
+  reading_laser reading_encoder reading_velocities
   DESTINATION lib/${PROJECT_NAME}
 )
 
