--- a/ros_ws/src/robot/config/twist_mux.yaml
+++ b/ros_ws/src/robot/config/twist_mux.yaml
@@ -2,7 +2,7 @@ twist_mux:
   ros__parameters:
     topics:
       navigation:
-        topic   : cmd_velaaa
+        topic   : cmd_vel
         timeout : 0.5
         priority: 10
       teleop:
