--- a/ros_ws/src/robot/config/mapper_params_online_async.yaml
+++ b/ros_ws/src/robot/config/mapper_params_online_async.yaml
@@ -12,9 +12,9 @@ slam_toolbox:
     # ROS Parameters
     odom_frame: odom
     map_frame: map
-    base_frame: base_footprint
+    base_frame: base_link
     scan_topic: /scan
-    mode: mapping #localization 
+    mode: mapping #localization
 
     # if you'd like to immediately start continuing a map at a given pose
     # or at the dock, but they are mutually exclusive, if pose is given
@@ -29,7 +29,7 @@ slam_toolbox:
     map_update_interval: 5.0
     resolution: 0.05
     max_laser_range: 20.0 #for rastering images
-    minimum_time_interval: 3.0
+    minimum_time_interval: 0.5
     transform_timeout: 0.2
     tf_buffer_duration: 30.
     stack_size_to_use: 40000000 #// program needs a larger stack size to serialize large maps
@@ -38,18 +38,18 @@ slam_toolbox:
     # General Parameters
     use_scan_matching: true
     use_scan_barycenter: true
-    minimum_travel_distance: 0.7
-    minimum_travel_heading: 0.7
+    minimum_travel_distance: 0.5
+    minimum_travel_heading: 0.5
     scan_buffer_size: 10
-    scan_buffer_maximum_scan_distance: 5.0
+    scan_buffer_maximum_scan_distance: 10.0
     link_match_minimum_response_fine: 0.1  
     link_scan_maximum_distance: 1.5
-    loop_search_maximum_distance: 2.0
-    do_loop_closing: true
+    loop_search_maximum_distance: 3.0
+    do_loop_closing: true 
     loop_match_minimum_chain_size: 10           
-    loop_match_maximum_variance_coarse: 2.5  
-    loop_match_minimum_response_coarse: 0.45    
-    loop_match_minimum_response_fine: 0.55
+    loop_match_maximum_variance_coarse: 3.0  
+    loop_match_minimum_response_coarse: 0.35    
+    loop_match_minimum_response_fine: 0.45
 
     # Correlation Parameters - Correlation Parameters
     correlation_search_space_dimension: 0.5
