--- a/ros_ws/src/robot/config/nav2_params2.yaml
+++ b/ros_ws/src/robot/config/nav2_params2.yaml
@@ -18,7 +18,7 @@ amcl:
     laser_min_range: -1.0
     laser_model_type: "likelihood_field"
     max_beams: 60
-    max_particles: 2000
+    max_particles: 2500
     min_particles: 500
     odom_frame_id: "odom"
     pf_err: 0.05
@@ -88,9 +88,9 @@ bt_navigator_rclcpp_node:
 controller_server:
   ros__parameters:
     use_sim_time: True
-    controller_frequency: 20.0
+    controller_frequency: 10.0
     min_x_velocity_threshold: 0.001
-    min_y_velocity_threshold: 0.5
+    min_y_velocity_threshold: 0.0
     min_theta_velocity_threshold: 0.001
     progress_checker_plugin: "progress_checker"
     goal_checker_plugin: "goal_checker"
@@ -99,59 +99,74 @@ controller_server:
     # Progress checker parameters
     progress_checker:
       plugin: "nav2_controller::SimpleProgressChecker"
-      required_movement_radius: 0.5
-      movement_time_allowance: 10.0
+      required_movement_radius: 0.2
+      movement_time_allowance: 15.0
     # Goal checker parameters
     goal_checker:
       plugin: "nav2_controller::SimpleGoalChecker"
-      xy_goal_tolerance: 0.25
-      yaw_goal_tolerance: 0.25
-      stateful: True
+      xy_goal_tolerance: 0.15
+      yaw_goal_tolerance: 0.15
+      stateful: False
     # DWB parameters
     FollowPath:
       plugin: "dwb_core::DWBLocalPlanner"
       debug_trajectory_details: True
-      min_vel_x: 0.0
+      min_vel_x: 0.1
       min_vel_y: 0.0
       max_vel_x: 3.0
       max_vel_y: 0.0
       max_vel_theta: 3.0
-      min_speed_xy: -2.0
-      max_speed_xy: 3.0
-      min_speed_theta: 1.0
+      min_speed_xy: 0.15
+      max_speed_xy: 5.0
+      min_speed_theta: 0.1
       # Add high threshold velocity for turtlebot 3 issue.
       # https://github.com/ROBOTIS-GIT/turtlebot3_simulations/issues/75
-      acc_lim_x: 5.0
+      acc_lim_x: 1.0
       acc_lim_y: 0.0
-      acc_lim_theta: 6.4
-      decel_lim_x: -5.0
+      acc_lim_theta: 1.5
+      decel_lim_x: -1.5
       decel_lim_y: 0.0
-      decel_lim_theta: -6.4
+      decel_lim_theta: -1.5
       vx_samples: 20
-      vy_samples: 20
+      vy_samples: 1
       vtheta_samples: 20
-      sim_time: 1.7
-      linear_granularity: 0.05
-      angular_granularity: 0.025
-      transform_tolerance: 0.1
-      xy_goal_tolerance: 0.30
-      yaw_goal_tolerance: 0.17
-      trans_stopped_velocity: 0.25
+      sim_time: 2.5 #2.5
+      linear_granularity: 0.02
+      angular_granularity: 0.02
+      transform_tolerance: 0.2
+      xy_goal_tolerance: 0.25
+      yaw_goal_tolerance: 0.25
+      trans_stopped_velocity: 0.02
       short_circuit_trajectory_evaluation: True
-      shorten_transformed_plan: false
+      shorten_transformed_plan: False
       stateful: True
-      critics: ["RotateToGoal", "Oscillation", "BaseObstacle", "GoalAlign", "PathAlign", "PathDist", "GoalDist"]
-      BaseObstacle.scale: 0.02
-      PathAlign.scale: 0.0
-      PathAlign.forward_point_distance: 0.1
-      GoalAlign.scale: 0.0
-      GoalAlign.forward_point_distance: 0.1
-      PathDist.scale: 32.0
-      GoalDist.scale: 24.0
-      ObstacleCritic.scale: 50.0
-      RotateToGoal.scale: 32.0
-      RotateToGoal.slowing_factor: 5.0
+      critics: ["RotateToGoal", "ObstacleFootprint", "Oscillation", "BaseObstacle", "GoalAlign", "PathAlign", "PathDist", "GoalDist"]
+      # BaseObstacle.scale: 6.0 #40.0
+      # ObstacleFootprint.scale: 5.0 #50.0
+      # PathAlign.scale: 30.0
+      # PathAlign.forward_point_distance: 0.15
+      # GoalAlign.scale: 40.0
+      # GoalAlign.forward_point_distance: 0.05
+      # PathDist.scale: 40.0
+      # GoalDist.scale: 40.0
+      # RotateToGoal.scale: 100.0
+      # RotateToGoal.slowing_factor: 0.0
+      # RotateToGoal.lookahead_time: 0.0
+      # RotateToGoal.xy_goal_tolerance: 0.15
+      # Oscillation.scale: 9.0
+      BaseObstacle.scale: 40.0 #40.0
+      ObstacleFootprint.scale: 60.0 #50.0
+      PathAlign.scale: 40.0
+      PathAlign.forward_point_distance: 0.15
+      GoalAlign.scale: 30.0
+      GoalAlign.forward_point_distance: 0.05
+      PathDist.scale: 50.0
+      GoalDist.scale: 60.0
+      RotateToGoal.scale: 70.0
+      RotateToGoal.slowing_factor: 0.0
       RotateToGoal.lookahead_time: -1.0
+      RotateToGoal.xy_goal_tolerance: 0.15
+      Oscillation.scale: 0.0
 
 controller_server_rclcpp_node:
   ros__parameters:
@@ -160,21 +175,22 @@ controller_server_rclcpp_node:
 local_costmap:
   local_costmap:
     ros__parameters:
-      update_frequency: 5.0
-      publish_frequency: 2.0
+      update_frequency: 10.0
+      publish_frequency: 10.0
       global_frame: odom
       robot_base_frame: base_link
       use_sim_time: True
       rolling_window: true
-      width: 3
-      height: 3
+      width: 9
+      height: 9
       resolution: 0.05
-      robot_radius: 0.22
+      footprint: "[[-0.1, -0.23], [-0.1, 0.23], [0.2, 0.23], [0.2, -0.23]]"
+      # robot_radius: 0.20
       plugins: ["voxel_layer", "inflation_layer"]
       inflation_layer:
         plugin: "nav2_costmap_2d::InflationLayer"
-        cost_scaling_factor: 3.0
-        inflation_radius: 0.55
+        cost_scaling_factor: 3.0 #15.0
+        inflation_radius: 0.45 #0.05
       voxel_layer:
         plugin: "nav2_costmap_2d::VoxelLayer"
         enabled: True
@@ -209,8 +225,9 @@ global_costmap:
       global_frame: map
       robot_base_frame: base_link
       use_sim_time: True
-      robot_radius: 0.22
-      resolution: 0.05
+      # robot_radius: 0.22
+      footprint: "[[-0.1, -0.23], [-0.1, 0.23], [0.2, 0.23], [0.2, -0.23]]"
+      resolution: 0.02
       track_unknown_space: true
       plugins: ["static_layer", "obstacle_layer", "inflation_layer"]
       obstacle_layer:
@@ -228,8 +245,8 @@ global_costmap:
         map_subscribe_transient_local: True
       inflation_layer:
         plugin: "nav2_costmap_2d::InflationLayer"
-        cost_scaling_factor: 3.0
-        inflation_radius: 0.55
+        cost_scaling_factor: 3.0 #8.0
+        inflation_radius: 0.5 #0.7
       always_send_full_costmap: True
   global_costmap_client:
     ros__parameters:
