--- a/ros_ws/src/robot/package.xml
+++ b/ros_ws/src/robot/package.xml
@@ -18,6 +18,9 @@
   <depend>nav_msgs</depend>
   <depend>message_filters</depend>
 
+  <exec_depend>pluginlib</exec_depend>
+  <exec_depend>nav2_core</exec_depend>
+
   <depend>geometry_msgs</depend>
   <buildtool_depend>rosidl_default_generators</buildtool_depend>
   <exec_depend>rosidl_default_runtime</exec_depend>
