Edit gitignore for CSV files

--- a/.gitignore
+++ b/.gitignore
@@ -7,5 +7,5 @@ ros_ws/install
 ros_ws/src/robot/bag_files/
 
 #csv files
-ai/csv_from_ros_bag/*.csv
-ai/datasets/*.csv
+ai/csv_from_rosbag/*.csv
+ai/csv_output/*.csv
